--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Jeremy Bouton</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/jb-icon-white-bg.png">
   <!-- <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;0,700;1,400&family=Roboto&display=swap" rel="stylesheet"> -->
 </head>
 <body>
