--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,30 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Jeremy Bouton</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/jb-icon-white-bg.png">
+
+  <meta name="keywords"
+    content="Web Developer, Javascript Developer, Full-stack Developer, Typescript Developer, Angular Developer, Mobile Developer, Database manager, Jeremy Bouton Live Resume, Jeremy Bouton Resume, Jeremy Bouton CV, Curriculum Jeremy Bouton" />
+  <meta name="robots" content="index, follow" />
+  <meta name="author" content="Jeremy Bouton" />
+
+  <!-- Facebook -->
+  <meta property="og:title" content="Online Resume - Jeremy Bouton" />
+  <meta property="og:image" content="assets/jb-icon-white-bg.png" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://jeremy-bouton.fr/" />
+  <meta property="og:title" content="Live Resume - Jeremy Bouton" />
+  <meta property="og:description"
+    content="Online resume of Jeremy Bouton, Web Developer and passionate about the new web technologies" />
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
