adding icon as .ico + trying to update project

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>Jeremy Bouton</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/jb-icon-white-bg.png">
+  <link rel="icon" href="assets/jb-icon-white-bg.ico">
 
   <meta name="keywords"
     content="Web Developer, Javascript Developer, Full-stack Developer, Typescript Developer, Angular Developer, Mobile Developer, Database manager, Jeremy Bouton Live Resume, Jeremy Bouton Resume, Jeremy Bouton CV, Curriculum Jeremy Bouton" />
@@ -15,7 +15,7 @@
 
   <!-- Facebook -->
   <meta property="og:title" content="Online Resume - Jeremy Bouton" />
-  <meta property="og:image" content="assets/jb-icon-white-bg.png" />
+  <meta property="og:image" content="assets/jb-icon-white-bg.ico" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://jeremy-bouton.fr/" />
   <meta property="og:title" content="Live Resume - Jeremy Bouton" />
