--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
   <meta property="og:url" content="https://jeremy-bouton.fr/" />
   <meta property="og:title" content="Live Resume - Jeremy Bouton" />
   <meta property="og:description"
-    content="Online resume of Jeremy Bouton, Web Developer and passionate about the new web technologies" />
+    content="Web Developer and passionate about the new web/network/containers technologies" />
 </head>
 
 <body>
